--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "tsc -w & nodemon dist/app.js"
+    "start": "node ./dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +30,8 @@
     "nanoid": "^4.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
