--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node ./src/app.ts",
-    "start": "node ./dist/app.js"
+    "build": "npm install && tsc -prepending",
+    "start": "node ./dist/app.js",
+    "dev": "ts-node ./src/app.ts"
+    
   },
   "repository": {
     "type": "git",
