--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "build": "npm install && tsc",
+    "build": "tsc",
     "start": "node ./dist/app.js",
     "dev": "ts-node ./src/app.ts"
     
