--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/app.js",
-    "dev": "ts-node ./src/app.ts"
+    "start": "node ./dist/app.js"
     
   },
   "repository": {
